--- a/TODO
+++ b/TODO
@@ -1,2 +1,1 @@
-Scan library and find unrecognized & common tags
-Add description, license, license_file, documentation, homepage and repository to Cargo.toml
+Exif tag namespace is per private IFD
